# clock-parts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: work_flux.yml
ClockParts/: shaft.py
ClockParts/utils/: main.py
clock/: __init__.py  shaft.py
examples/mininal/: main.py
examples/mininal/cogs/: my_cogs.py
scripts/: mininal_tasks.bash
